--- a/literature.bib
+++ b/literature.bib
@@ -1,5 +1,5 @@
 @article{lawler1973,
-  title={Cutsets and partitions of hypergraphs},
+  title={{Cutsets and Partitions of Hypergraphs}},
   author={Lawler, Eugene L},
   journal={Networks},
   volume={3},
@@ -10,7 +10,7 @@
 }
 
 @inproceedings{heuer2017improving,
-  title={Improving Coarsening Schemes for Hypergraph Partitioning by Exploiting Community Structure},
+  title={{Improving Coarsening Schemes for Hypergraph Partitioning by Exploiting Community Structure}},
   author={Heuer, Tobias and Schlag, Sebastian},
   booktitle={LIPIcs-Leibniz International Proceedings in Informatics},
   volume={75},
@@ -19,7 +19,7 @@
 }
 
 @article{pistorius2003,
-  title={An improved direct labeling method for the max--flow min--cut computation in large hypergraphs and applications},
+  title={{An Improved Direct Labeling Method for the Max--Flow Min--Cut Computation in Large Hypergraphs and Applications}},
   author={Pistorius, Joachim and Minoux, Michel},
   journal={International Transactions in Operational Research},
   volume={10},
@@ -30,7 +30,7 @@
 }
 
 @article{fortunato2010community,
-  title={Community detection in graphs},
+  title={{Community Detection in Graphs}},
   author={Fortunato, Santo},
   journal={Physics reports},
   volume={486},
@@ -41,7 +41,7 @@
 }
 
 @article{kahn1962topological,
-  title={Topological sorting of large networks},
+  title={{Topological Sorting of Large Networks}},
   author={Kahn, Arthur B},
   journal={Communications of the ACM},
   volume={5},
@@ -52,7 +52,7 @@
 }
 
 @article{tarjan1972depth,
-  title={Depth-first search and linear graph algorithms},
+  title={{Depth-First Search and Linear Graph Algorithms}},
   author={Tarjan, Robert},
   journal={SIAM journal on computing},
   volume={1},
@@ -74,14 +74,14 @@
 }
 
 @techreport{harris1955,
-  title={Fundamentals of a method for evaluating rail net capacities},
+  title={{Fundamentals of a Method for Evaluating Rail Net Capacities}},
   author={Harris, TE and Ross, FS},
   year={1955},
   institution={RAND CORP SANTA MONICA CA}
 }
 
 @inproceedings{sleator1981data,
-  title={A data structure for dynamic trees},
+  title={{A Data Structure for Dynamic Trees}},
   author={Sleator, Daniel D and Tarjan, Robert Endre},
   booktitle={Proceedings of the thirteenth annual ACM symposium on Theory of computing},
   pages={114--122},
@@ -90,7 +90,7 @@
 }
 
 @article{alpert1995recent,
-  title={Recent directions in netlist partitioning: a survey},
+  title={{Recent Directions in Netlist Partitioning: a Survey}},
   author={Alpert, Charles J and Kahng, Andrew B},
   journal={Integration, the VLSI journal},
   volume={19},
@@ -101,21 +101,21 @@
 }
 
 @book{bader2013graph,
-  title={Graph partitioning and graph clustering},
+  title={{Graph Partitioning and Graph Clustering}},
   author={Bader, David A and Meyerhenke, Henning and Sanders, Peter and Wagner, Dorothea},
   volume={588},
   year={2013},
-  publisher={American Mathematical Soc.}
+  publisher={American Mathematical Society}
 }
 
 @misc{papa2007hypergraph,
-  title={Hypergraph Partitioning and Clustering.},
+  title={{Hypergraph Partitioning and Clustering}},
   author={Papa, David A and Markov, Igor L},
   year={2007}
 }
 
 @article{goldberg1988new,
-  title={A new approach to the maximum-flow problem},
+  title={{A new Approach to the Maximum-Flow Problem}},
   author={Goldberg, Andrew V and Tarjan, Robert E},
   journal={Journal of the ACM (JACM)},
   volume={35},
@@ -126,7 +126,7 @@
 }
 
 @article{cherkassky1994fast,
-  title={A fast algorithm for computing maximum flow in a network},
+  title={{A Fast Algorithm for Computing Maximum Flow in a Network}},
   author={Cherkassky, Boris V},
   journal={Collected Papers},
   volume={3},
@@ -135,7 +135,7 @@
 }
 
 @article{derigs1989implementing,
-  title={Implementing Goldberg's max-flow-algorithm—A computational investigation},
+  title={{Implementing Goldberg's Max-Flow-Algorithm — A Computational Investigation}},
   author={Derigs, Ulrich and Meier, Wolfgang},
   journal={Mathematical Methods of Operations Research},
   volume={33},
@@ -146,7 +146,7 @@
 }
 
 @article{cherkassky1997implementing,
-  title={On implementing the push—relabel method for the maximum flow problem},
+  title={{On Implementing the Push-Relabel Method for the Maximum Flow Problem}},
   author={Cherkassky, Boris V and Goldberg, Andrew V},
   journal={Algorithmica},
   volume={19},
@@ -157,7 +157,7 @@
 }
 
 @article{edmonds1972theoretical,
-  title={Theoretical improvements in algorithmic efficiency for network flow problems},
+  title={{Theoretical Improvements in Algorithmic Efficiency for Network Flow Problems}},
   author={Edmonds, Jack and Karp, Richard M},
   journal={Journal of the ACM (JACM)},
   volume={19},
@@ -168,16 +168,16 @@
 }
 
 @inproceedings{alpert1998ispd98,
-  title={The ISPD98 circuit benchmark suite},
-  author={Alpert, Charles J},
-  booktitle={Proceedings of the 1998 international symposium on Physical design},
+  title={{The ISPD98 Circuit Benchmark Suite}},
+  author={Alpert, Charles J.},
+  booktitle={Proceedings of the 1998 International Symposium on Physical Design},
   pages={80--85},
   year={1998},
   organization={ACM}
 }
 
 @article{davis2011university,
-  title={The University of Florida sparse matrix collection},
+  title={{The University of Florida Sparse Matrix Collection}},
   author={Davis, Timothy A and Hu, Yifan},
   journal={ACM Transactions on Mathematical Software (TOMS)},
   volume={38},
@@ -188,15 +188,15 @@
 }
 
 @article{belov2014application,
-  title={The application and the hard combinatorial benchmarks in sat competition 2014},
+  title={{The Application and the Hard Combinatorial Benchmarks in Sat Competition 2014}},
   author={Belov, Anton and Heule, MJ and Diepold, Daniel and J{\"a}rvisalo, Matti},
-  journal={Proceedings of SAT competition},
+  journal={Proceedings of SAT Competition},
   pages={81--82},
   year={2014}
 }
 
 @inproceedings{viswanathan2012dac,
-  title={The DAC 2012 routability-driven placement contest and benchmark suite},
+  title={{The DAC 2012 Routability-Driven Placement Contest and Benchmark Suite}},
   author={Viswanathan, Natarajan and Alpert, Charles and Sze, Cliff and Li, Zhuo and Wei, Yaoguang},
   booktitle={Proceedings of the 49th Annual Design Automation Conference},
   pages={774--782},
@@ -205,7 +205,7 @@
 }
 
 @article{bui1992finding,
-  title={Finding good approximate vertex and edge partitions is NP-hard},
+  title={{Finding Good Approximate Vertex and Edge Partitions is NP-Hard}},
   author={Bui, Thang Nguyen and Jones, Curt},
   journal={Information Processing Letters},
   volume={42},
@@ -216,14 +216,14 @@
 }
 
 @book{lengauer2012combinatorial,
-  title={Combinatorial algorithms for integrated circuit layout},
+  title={{Combinatorial Algorithms for Integrated Circuit Layout}},
   author={Lengauer, Thomas},
   year={2012},
   publisher={Springer Science \& Business Media}
 }
 
 @incollection{bulucc2016recent,
-  title={Recent advances in graph partitioning},
+  title={{Recent Advances in Graph Partitioning}},
   author={Bulu{\c{c}}, Ayd{\i}n and Meyerhenke, Henning and Safro, Ilya and Sanders, Peter and Schulz, Christian},
   booktitle={Algorithm Engineering},
   pages={117--158},
@@ -232,22 +232,22 @@
 }
 
 @article{mann2014formula,
-  title={Formula partitioning revisited},
+  title={{Formula Partitioning Revisited}},
   author={Mann, Zolt{\'a}n {\'A}d{\'a}m and Papp, P{\'a}l Andr{\'a}s},
   year={2014}
 }
 
 @inproceedings{akhremtsev2017engineering,
-  title={Engineering a direct k-way Hypergraph Partitioning Algorithm},
+  title={{Engineering a direct k-way Hypergraph Partitioning Algorithm}},
   author={Akhremtsev, Yaroslav and Heuer, Tobias and Sanders, Peter and Schlag, Sebastian},
-  booktitle={2017 Proceedings of the Ninteenth Workshop on Algorithm Engineering and Experiments (ALENEX)},
+  booktitle={2017 Proceedings of the 19th Workshop on Algorithm Engineering and Experiments (ALENEX)},
   pages={28--42},
   year={2017},
   organization={SIAM}
 }
 
 @article{karypis1999multilevel,
-  title={Multilevel hypergraph partitioning: applications in VLSI domain},
+  title={{Multilevel Hypergraph Partitioning: Applications in VLSI Domain}},
   author={Karypis, George and Aggarwal, Rajat and Kumar, Vipin and Shekhar, Shashi},
   journal={IEEE Transactions on Very Large Scale Integration (VLSI) Systems},
   volume={7},
@@ -258,7 +258,7 @@
 }
 
 @article{karypis2000multilevel,
-  title={Multilevel k-way hypergraph partitioning},
+  title={{Multilevel k-way Hypergraph Partitioning}},
   author={Karypis, George and Kumar, Vipin},
   journal={VLSI design},
   volume={11},
@@ -269,7 +269,7 @@
 }
 
 @article{catalyurek1999hypergraph,
-  title={Hypergraph-partitioning-based decomposition for parallel sparse-matrix vector multiplication},
+  title={{Hypergraph-Partitioning-based Decomposition for Parallel Sparse-Matrix Vector Multiplication}},
   author={Catalyurek, Umit V and Aykanat, Cevdet},
   journal={IEEE Transactions on parallel and distributed systems},
   volume={10},
@@ -281,7 +281,7 @@
 
 
 @inproceedings{osipov2010n,
-  title={n-Level Graph Partitioning},
+  title={{n-Level Graph Partitioning}},
   author={Osipov, Vitaly and Sanders, Peter},
   booktitle={European Symposium on Algorithms},
   pages={278--289},
@@ -290,14 +290,14 @@
 }
 
 @phdthesis{heuer2015engineering,
-  title={Engineering Initial Partitioning Algorithms for direct k-way Hypergraph Partitioning},
+  title={{Engineering Initial Partitioning Algorithms for direct k-way Hypergraph Partitioning}},
   author={Heuer, Tobias},
   year={2015},
   school={Karlsruher Institut f{\"u}r Technologie (KIT)}
 }
 
 @inproceedings{schlag2016k,
-  title={k-way Hypergraph Partitioning via n-Level Recursive Bisection},
+  title={{k-way Hypergraph Partitioning via n-Level Recursive Bisection}},
   author={Schlag, Sebastian and Henne, Vitali and Heuer, Tobias and Meyerhenke, Henning and Sanders, Peter and Schulz, Christian},
   booktitle={2016 Proceedings of the Eighteenth Workshop on Algorithm Engineering and Experiments (ALENEX)},
   pages={53--67},
@@ -306,7 +306,7 @@
 }
 
 @article{sanchis1989multiple,
-  title={Multiple-way network partitioning},
+  title={{Multiple-Way Network Partitioning}},
   author={Sanchis, Laura A},
   journal={IEEE Transactions on Computers},
   volume={38},
@@ -317,7 +317,7 @@
 }
 
 @article{ford1956maximal,
-  title={Maximal flow through a network},
+  title={{Maximal Flow through a Network}},
   author={Ford, Lester R and Fulkerson, Delbert R},
   journal={Canadian journal of Mathematics},
   volume={8},
@@ -327,14 +327,14 @@
 }
 
 @book{ford2015flows,
-  title={Flows in networks},
+  title={{Flows in Networks}},
   author={Ford Jr, Lester Randolph and Fulkerson, Delbert Ray},
   year={2015},
   publisher={Princeton university press}
 }
 
 @inproceedings{lang2004flow,
-  title={A flow-based method for improving the expansion or conductance of graph cuts},
+  title={{A Flow-Based Method for improving the Expansion or Conductance of Graph Cuts}},
   author={Lang, Kevin and Rao, Satish},
   booktitle={IPCO},
   volume={4},
@@ -344,16 +344,16 @@
 }
 
 @inproceedings{andersen2008algorithm,
-  title={An algorithm for improving graph partitions},
+  title={{An Algorithm for Improving Graph Partitions}},
   author={Andersen, Reid and Lang, Kevin J},
-  booktitle={Proceedings of the nineteenth annual ACM-SIAM symposium on Discrete algorithms},
+  booktitle={Proceedings of the 19th annual ACM-SIAM symposium on Discrete algorithms},
   pages={651--660},
   year={2008},
   organization={Society for Industrial and Applied Mathematics}
 }
 
 @inproceedings{sanders2011engineering,
-  title={Engineering Multilevel Graph Partitioning Algorithms.},
+  title={{Engineering Multilevel Graph Partitioning Algorithms}},
   author={Sanders, Peter and Schulz, Christian},
   booktitle={ESA},
   volume={6942},
@@ -363,7 +363,7 @@
 }
 
 @article{picard1980structure,
-  title={On the structure of all minimum cuts in a network and applications},
+  title={{On the Structure of all Minimum Cuts in a Network and Applications}},
   author={Picard, Jean-Claude and Queyranne, Maurice},
   journal={Combinatorial Optimization II},
   pages={8--16},
@@ -372,7 +372,7 @@
 }
 
 @inproceedings{holtgrewe2010engineering,
-  title={Engineering a scalable high quality graph partitioner},
+  title={{Engineering a scalable High Quality Graph Partitioner}},
   author={Holtgrewe, Manuel and Sanders, Peter and Schulz, Christian},
   booktitle={Parallel \& Distributed Processing (IPDPS), 2010 IEEE International Symposium on},
   pages={1--12},
@@ -381,7 +381,7 @@
 }
 
 @inproceedings{fiduccia1988linear,
-  title={A linear-time heuristic for improving network partitions},
+  title={{A Linear-Time Heuristic for improving Network Partitions}},
   author={Fiduccia, Charles M and Mattheyses, Robert M},
   booktitle={Papers on Twenty-five years of electronic design automation},
   pages={241--247},
