--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -350,10 +350,13 @@ imperdiet a, venenatis vitae, justo.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\bibliographystyle{plain}
+\bibliographystyle{abbrv}
 \bibliography{../literature}
 
+
+\begin{appendix}
 \input{sections/appendix}
+\end{appendix}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
