place legend in performance plots as seperate plot

--- a/master_thesis/sections/appendix.tex
+++ b/master_thesis/sections/appendix.tex
@@ -167,3 +167,11 @@ Type & $\max{|E|}$ & Avg.$|e|$ & Med.$|e|$ & Avg.$d(v)$ & Med.$d(v)$ & Avg.$\fra
          other systems for different values of $k$.}
 \label{tbl:full_running_time_k} 
 \end{table}
+
+\begin{figure}
+\centering
+\input{experiments/final_flow/fullset-k.tex} %
+\caption{Min-Cut performance plots comparing \KaHyPar{MF} with \KaHyPar{CA} and
+         other systems for different values of $k$.}
+\label{fig:final_flow_k}
+\end{figure}
