refactor introduction and preliminaries

--- a/literature.bib
+++ b/literature.bib
@@ -29,6 +29,17 @@
   publisher={Wiley Online Library}
 }
 
+@article{zhao2002effective,
+  title={{An Effective Algorithm for Multiway Hypergraph Partitioning}},
+  author={Zhao, Zhizi and Tao, Lixin and Zhao, Yongchang},
+  journal={IEEE Transactions on Circuits and Systems I: Fundamental Theory and Applications},
+  volume={49},
+  number={8},
+  pages={1079--1092},
+  year={2002},
+  publisher={IEEE}
+}
+
 @article{fortunato2010community,
   title={{Community Detection in Graphs}},
   author={Fortunato, Santo},
@@ -60,6 +71,14 @@
   pages={146--160},
   year={1972},
   publisher={SIAM}
+}
+
+@book{west2001introduction,
+  title={{Introduction to Graph Theory}},
+  author={West, Douglas Brent and others},
+  volume={2},
+  year={2001},
+  publisher={Prentice hall Upper Saddle River}
 }
 
 @incollection{HuMoerder85,
